/*
 * Copyright 2018 Loopring Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package io.lightcone.relayer.socketio;

import "relayer_ethereum.proto";
//TODO（yadong） 在未和红雨关于事件的PR合并之前，暂时先放到这里。待红雨的PR合并以后归并到一处

message AddressBalanceAndAllowanceEvent{
    string address = 1;
    string token = 2;
    bytes balance = 3;
    bytes allowance = 4;
    bytes available_balance = 5;
    bytes available_alloawnce = 6;
}

message TransactionEvent {
    string hash = 1;
    string nonce = 2;
    string blockHash = 3;
    string blockNumber = 4;
    string transactionIndex = 5;
    string from = 6;
    string to = 7;
    string value = 8;
    string gasPrice = 9;
    string gas = 10;
    string gasUsed = 11;
    string input = 12;
    io.lightcone.relayer.data.TxStatus status = 13;
    int32 type = 14;                //corresponding to TransactionRecord.RecordType
    string owner = 15;
    string time = 16;
}
